--- a/scss/style.scss
+++ b/scss/style.scss
@@ -401,3 +401,121 @@ footer {
     border: none;
   }
 }
+
+//  Contact Section////////////////////
+
+.container {
+  max-width: 1320px;
+  margin: 0 auto;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.main {
+  .contact {
+    padding: 128px 0px;
+    .container {
+      .contact-form {
+        &__btn {
+          padding: 15px 51px;
+          width: 254px;
+          height: 64px;
+          max-width: 100%;
+          color: var(--Grey, #f4f6fc);
+          font-family: " Manrope";
+          font-size: 18px;
+          border: none;
+          font-weight: 600;
+          line-height: 32px;
+          border-radius: 41px;
+          background: var(--Dark-blue, #282938);
+          &:hover {
+            background-color: white;
+            color: #282938;
+            border: 1px solid #282938;
+            transition: 0.5s;
+          }
+        }
+        &__textarea {
+          width: 1100px;
+          height: 138px;
+          padding: 18px 32px;
+          gap: 10px;
+          max-width: 100%;
+          flex-shrink: 0;
+          border-radius: 8px;
+          outline: none;
+          margin-bottom: 32px;
+          border: 1px solid rgba(0, 0, 0, 0.12);
+        }
+        margin-right: auto;
+        margin-left: auto;
+        &__i {
+          display: flex;
+          justify-content: space-between;
+        }
+        max-width: 100%;
+        border-radius: 12px;
+        background: var(--Grey, #f4f6fc);
+        padding: 56px 76px 69px 76px;
+        &__inputs {
+          padding: 18px 32px;
+          width: 438px;
+          border-radius: 8px;
+          border: 1px solid rgba(0, 0, 0, 0.12);
+          margin-bottom: 24px;
+          max-width: 100%;
+          outline: none;
+        }
+      }
+      .contact-title {
+        text-align: center;
+        &__heading {
+          color: var(--Dark-blue, #282938);
+          font-family: "Poppins";
+          font-size: 48px;
+          font-weight: 600;
+          line-height: 64px;
+        }
+        &__paragraph {
+          width: 562px;
+          max-width: 100%;
+          color: var(--Dark-blue, #282938);
+          font-family: "Poppins";
+          font-size: 16px;
+          font-weight: 400;
+          margin-right: auto;
+          margin-left: auto;
+          line-height: 28px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1085px) {
+  .main {
+    .contact {
+      .contact-form {
+        .contact-form__textarea {
+          width: 440px;
+        }
+        .contact-form__i {
+          flex-direction: column;
+          margin-right: auto;
+          margin-left: auto;
+        }
+      }
+    }
+  }
+}
+
+// contact section
